# wasmsockets

./: README.md  pyproject.toml
wasmsockets/: client.py  worker.py
