[tool.poetry]
name = "wasmsockets"
version = "0.1.1"
description = "Async interface to Pyodide WebSockets"
authors = ["dek <dek@substructure.one>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/SubstructureOne/wasmsockets"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
