[tool.poetry]
name = "wasmsockets"
version = "0.1.3"
description = "Async interface to Pyodide WebSockets"
authors = ["dek <dek@substructure.one>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/SubstructureOne/wasmsockets"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^10.4"


[tool.poetry.group.debug.dependencies]
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
